--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.lineicons.com/4.0/lineicons.css" />
     <link rel="stylesheet" href="Styles/style.css">
-    <title>Document</title>
+    <title>Unfold</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-1g bg-body-tertiary fixed-top">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top p-3">
         <div class="container-fluid ps-md-5 ms-md-5 me-md-5">
           <a class="navbar-brand ms-md-5 ps-md-5 " href="#"><img src="/Assets/logo.png"></a>
           <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,15 +22,17 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto pe-5 me-5">
               <a class="nav-link " aria-current="page" href="#">HOME</a>
-              <a class="nav-link" href="#">ABOUT</a>
-              <a class="nav-link" href="#">SERVICES</a>
-              <a class="nav-link" href="#">PORTFOLIO</a>
-              <a class="nav-link" href="#">BLOG</a>
-              <a class="nav-link  me-5" href="#">CONTACT</a>
+              <a class="nav-link" href="#about">ABOUT</a>
+              <a class="nav-link" href="#serv">SERVICES</a>
+              <a class="nav-link" href="#port">PORTFOLIO</a>
+              <a class="nav-link" href="#blog">BLOG</a>
+              <a class="nav-link  me-5" href="#cont">CONTACT</a>
             </div>
           </div>
         </div>
       </nav>
+
+      
 
       <section class="Banner ">
 
@@ -179,7 +181,7 @@
 
       </section>
 
-      <section class="Conteudo__Port" id="Port">
+      <section class="Conteudo__Port" id="port">
         <strong class="Conteudo__Port__T">My Recent Works</strong>
         <p  class="Conteudo__Port__P">Nunc id sapien faucibus fermentum ut vai diam, Nuliam tempus, nunc id efficitur sagittis, urna est iltricies eras, ae porta sem turpis quis lea.</p>
 
@@ -284,7 +286,7 @@
 
         </section>
 
-        <section class="conteudo-blog">
+        <section class="conteudo-blog" id="blog">
           <div class="Conteudo__About__D">
             <strong class="Conteudo__About__T">From The Blog</strong>
             <p  class="Conteudo__About__P">Nunc id sapien faucibus fermentum ut vai diam, Nuliam tempus, nunc id efficitur sagittis, urna est iltricies eras, ae porta sem turpis quis lea.</p>
@@ -351,22 +353,38 @@
               </div>
               <br>
 
-              <!-- <form>
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label"></label>
-                  <input type="email" placeholder="Name" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <div id="emailHelp" class="form-text"></div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label"></label>
-                  <input type="password" placeholder="Email" class="form-control" id="exampleInputPassword1">
-                </div>
-                <button type="submit" class="Conteudo__Banner__View__Btn">Submit</button>
-              </form>
+              <div class="container text-center">
+                <div class="row">
+                  <div class="col" id="msg">
+                    <form class="principal__formulario" data-formulario id="form">
+                       <fieldset class="formulario__campo">
+                         <input  name="nome" id="nome" class="form-control p-2" placeholder="Name" type="text" minlength="3" required>
+                         <span class="mensagem-erro"></span>
+                       </fieldset>
 
-              <div class="map">
+                       <fieldset class="formulario__campo">
+                         <input name="email" id="email" class="form-control p-2 mt-4" placeholder="Email" type="email" minlength="4" required>
+                        <span class="mensagem-erro"></span>
+                      </fieldset>
+
+                      <fieldset class="formulario__campo">
+                        <div class="form-floating">
+                          <textarea name="comment" id="comment" class="form-control mt-4" placeholder="Leave a comment here" type="text" minlenght="5" style="height: 100px" required></textarea>
+                          <label for="floatingTextarea2">Comments</label>
+                          <span class="mensagem-erro"></span>
+                        </div>
+                      </fieldset>   
+                  <button type="submit" class="Conteudo__cont__View__Btn mt-4"  type="submit">Submit</button>
+                </form>
+                  </div>
+                  <div class="col">
+
+                   <div class="map mb-5">
                 <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            </div> -->
+                </div>
+                  </div>
+                </div>
+              </div>
 
         </section>
         
@@ -390,7 +408,7 @@
 
 
 
-
+    <script src="/js/script.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script>
 </body>
